name:	debilski-de
version: 0.1
build-type: Simple
cabal-version: >=1.18

library
  exposed-modules: PygmentsFilter
                 , HistoryContext
  hs-source-dirs:  src-lib
  default-language: Haskell2010
  build-depends: base
               , aeson
               , containers
               , bytestring
               , process
               , hakyll >= 4.6
               , pandoc
               , pandoc-types
               , MissingH
               , blaze-html
               , blaze-markup

executable debilski-de
  main-is:	debilski-de.hs
  default-language: Haskell2010
  build-depends: base
               , aeson
               , containers
               , bytestring
               , process
               , hakyll >= 4.6
               , pandoc
               , debilski-de

